# check_zpools

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_ARCHITECTURE.md  DEVELOPMENT.md  Makefile  README.md  REFACTORING_OPPORTUNITIES.md  REFACTORING_REVIEW.md  codecov.yml  pyproject.toml
.github/workflows/: ci.yml  default_cicd_public.yml
LLM-CONTEXT/: COMPREHENSIVE_CODE_REVIEW_REPORT.md  COMPREHENSIVE_REVIEW_FINDINGS.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  REQUIREMENTS.md  REVIEW_ARTIFACTS_INDEX.md  REVIEW_SUMMARY.md  V1_FIXES.md  V1_FIXES_HISTORY.md  alerting_verification.txt  analyze_changes.py  categorize_files.sh  categorized_files.txt  changed_files_list.txt  changes.diff  check_duplication.py  check_function_lengths.py  directory_breakdown.txt  duplication_analysis.txt  file_types_breakdown.txt  files_to_review.txt  files_to_review_filtered.txt  final_code_smell_check.txt  findings_alerting.md  findings_behaviors.md  findings_test_alerting.md  findings_zfs_client.md  full_complexity_analysis.txt  full_duplication_report.txt  full_security_analysis.txt  function_analysis.txt  function_length_analysis.txt  functions_zfs_client.txt  line_counts.txt  logging_setup_simplification.md  post_refactoring_complexity.txt  (+11 more)
LLM-CONTEXT/fix-anal/: ROLLBACK_INSTRUCTIONS.md  fix_metadata.json  pre_fix_commit.txt  pre_fix_stash.txt
LLM-CONTEXT/fix-anal/critical/: EXECUTION_SUMMARY.md  FIX-0_EVIDENCE.md  FIX-0_after_ruff_all.txt  FIX-0_before_ruff.txt  FIX-0_test_run_1.txt  FIX-0_test_run_2.txt  FIX-0_test_run_3.txt  ISSUE-1_EVIDENCE.md  ISSUE-1_after_complexity.txt  ISSUE-1_before_complexity.txt  ISSUE-1_test_run_1.txt  ISSUE-1_test_run_2.txt  ISSUE-1_test_run_3.txt  ISSUE-2_EVIDENCE.md  ISSUE-2_after_content.txt  ISSUE-2_before_content.txt  ISSUE-2_test_run.txt
LLM-CONTEXT/fix-anal/docs/: EXECUTION_REPORT.md  SUMMARY.md  baseline_test_results.txt  issue12_test_run1.txt  issue12_test_run2.txt  issue12_test_run3.txt  issue5_test_run1.txt  issue5_test_run2.txt  issue5_test_run3.txt  issue6_test_run1.txt  issue7_test_run1.txt  issue7_test_run2.txt  issue7_test_run3.txt  progress_tracker.md
LLM-CONTEXT/fix-anal/metrics/: baseline_tests_run1.txt  baseline_tests_run2.txt
LLM-CONTEXT/fix-anal/plan/: FIX_PLAN.md  INDEX.md  QUICK_REFERENCE.md
LLM-CONTEXT/fix-anal/quality/: EXECUTION_REPORT.md  P2_STATUS.md  baseline_complexity.csv  baseline_test_run1.txt  baseline_test_run2.txt  baseline_test_run3.txt  fix1_test_run1.txt  fix1_test_run2.txt  fix1_test_run3.txt  high_complexity_functions.txt
LLM-CONTEXT/fix-anal/report/: FIX_REPORT.md
LLM-CONTEXT/fix-anal/verification/: EXECUTIVE_SUMMARY.txt  METRICS_COMPARISON.md  VERIFICATION_INDEX.md  VERIFICATION_REPORT.md  complexity_after.txt  pip_audit_after.json  security_after.json  test_run1.txt  test_run2.txt  test_run3.txt
LLM-CONTEXT/review-anal/: detailed_breakdown.txt  files_to_review.txt  review_metadata.json  review_summary.md
LLM-CONTEXT/review-anal/cache/: CACHE_EVIDENCE.md  CACHING_RECOMMENDATIONS.md  INDEX.txt  OPTIMIZATIONS.md  README.md  SUMMARY.txt  cache_candidates.txt  existing_cache_benchmarks.txt  profile_caching.py  profile_cumulative.txt  profile_ncalls.txt  profile_tottime.txt  profiled_candidates.txt
LLM-CONTEXT/review-anal/cicd/: CICD_ANALYSIS_SUMMARY.md  INDEX.md  QUICK_REFERENCE.md  script_analysis.md  workflow_details.md
LLM-CONTEXT/review-anal/docs/: DOCUMENTATION_GAPS_REPORT.md  INDEX.md  README.md  REVIEW_COMPLETE.txt  SUMMARY.md  documentation_analysis.py
LLM-CONTEXT/review-anal/perf/: EXECUTIVE_SUMMARY.txt  INDEX.md  PERFORMANCE_SUMMARY.md  README.md  detailed_analysis.py  detailed_performance_analysis.txt  performance_report.txt  profile_tests.py
LLM-CONTEXT/review-anal/quality/: ANALYSIS_SUMMARY.md  complexity_analysis.txt  duplication_analysis.txt  quality_summary.txt  refactoring_opportunities.txt  run_quality_analysis.py
LLM-CONTEXT/review-anal/report/: EXECUTIVE_SUMMARY.md  REVIEW_REPORT.md
LLM-CONTEXT/review-anal/scope/: scope_summary.txt
LLM-CONTEXT/review-anal/security/: README.md  SECURITY_FINDINGS_SUMMARY.md  bandit_report.json  bandit_report.txt  command_injection_scan.txt  crypto_scan.txt  file_operations_scan.txt  pip_audit_report.json  python_files.txt  secrets_scan.txt  security_summary.md  sql_injection_scan.txt
docs/: CODE_REVIEW_2025-11-16.md  PEDANTIC_CODE_REVIEW_2025-11-17.md  PERFORMANCE_CACHE_ANALYSIS.md  REVIEW_FIXES_2025-11-17.md  TEST_REFACTORING_GUIDE.md  TEST_REFACTORING_STATUS.md  TEST_REFACTORING_SUMMARY.md
docs/examples/: check_zpools.service  config.toml.example
docs/systemdesign/: module_reference.md
notebooks/: Quickstart.ipynb
scripts/: test.py
src/check_zpools/: __init__.py  __init__conf__.py  __main__.py  alert_state.py  alerting.py  alias_manager.py  behaviors.py  cli.py  cli_email_handlers.py  cli_errors.py  cli_traceback.py  config.py  config_deploy.py  config_show.py  daemon.py  defaultconfig.toml  formatters.py  logging_setup.py  mail.py  models.py  monitor.py  service_install.py  zfs_client.py  zfs_parser.py
src/check_zpools/cli_commands/commands/: __init__.py  alias_create.py  alias_delete.py  check.py  config_deploy.py  config_show.py  daemon.py  send_email.py  send_notification.py  service_install.py  service_uninstall.py
tests/: conftest.py  smtp_sink.py  test_alert_state.py  test_alerting.py  test_alias_manager.py  test_behaviors.py  test_cli.py  test_cli_commands_integration.py  test_cli_email_handlers.py  test_cli_errors.py  test_cli_traceback.py  test_config.py  test_config_deploy.py  test_daemon.py  test_formatters.py  test_logging_setup.py  test_mail.py  test_models.py  test_module_entry.py  test_monitor.py  test_service_status.py  test_zfs_parser.py  zpool_status_degraded.json  zpool_status_with_errors.json
