[project]
name = "check_zpools"
version = "3.7.3"
description = "Zpool Monitoring Daemon"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich-click>=1.9.7",
    "lib_cli_exit_tools>=2.2.4",
    "lib_log_rich>=6.3.1",
    "lib_layered_config>=5.4.0",
    "btx-lib-mail>=1.3.1",
    "python-dateutil>=2.9.0",
    "psutil>=7.2.2",
    "pydantic>=2.12.5",
]
license = { text = "MIT" }
authors = [{ name = "bitranox", email = "bitranox@gmail.com" }]
keywords = ["cli", "daemon", "zpool", "monitoring"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/bitranox/check_zpools"
Repository = "https://github.com/bitranox/check_zpools.git"
Issues = "https://github.com/bitranox/check_zpools/issues"

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.15.1",
  "pyright[nodejs]>=1.1.408",
  "bandit>=1.9.3",
  "build>=1.4.0",
  "twine>=6.2.0",
  "codecov-cli>=11.2.6",
  "pip-audit>=2.10.0",
  "textual>=7.5.0",
  "import-linter>=2.10",
  "rtoml>=0.13.0"
]

[project.scripts]
check_zpools = "check_zpools.cli:main"

[build-system]
requires = ["hatchling>=1.28.0"]
build-backend = "hatchling.build"



[tool.hatch.build.targets.wheel]
packages = ["src/check_zpools"]
include = ["src/check_zpools/py.typed", "src/check_zpools/defaultconfig.toml"]

[tool.ruff]
line-length = 160
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
# ignore the "unused import sys" in the jupyter notebook - which we need (it is a linter hickup)
"notebooks/*.ipynb" = ["F401"]

[tool.pyright]
typeCheckingMode = "strict"
extraPaths = [
  "src",
]
exclude = [
  "scripts/menu.py",
  "LLM-CONTEXT",
]
reportPrivateUsage = false
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportMissingTypeArgument = "none"

[tool.pytest.ini_options]
addopts = ["--doctest-modules"]
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE"]
pythonpath = ["src"]
norecursedirs = ["LLM-CONTEXT", ".git", ".github", "dist", "build", "*.egg"]
markers = [
  "os_agnostic: test runs on every supported operating system",
  "os_windows: test exercises Windows-only behavior",
  "os_macos: test exercises macOS-only behavior",
  "os_posix: test exercises behavior requiring POSIX semantics",
  "os_linux: test exercises Linux-only behavior",
]

[tool.coverage.run]
branch = true
parallel = false
data_file = ".coverage.unit"
source = ["src/check_zpools"]

[tool.coverage.report]
omit = [
  "tests/*",
]
fail_under = 80
show_missing = true

[tool.clean]
# Patterns to remove when running `make clean` or `python -m scripts clean`
patterns = [
  ".hypothesis",
  ".import_linter_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".pyright",
  ".mypy_cache",
  ".tox",
  ".nox",
  ".eggs",
  "*.egg-info",
  "build",
  "dist",
  "htmlcov",
  ".coverage",
  "coverage.xml",
  "codecov.sh",
  ".cache",
  "result",
]

[tool.git]
# Default git remote for push/release commands
default-remote = "origin"


[tool.scripts.test]
# Configuration for scripts/test.py test runner
pytest-verbosity = "-vv"
coverage-report-file = "coverage.xml"
src-path = "src"
[tool.importlinter]
root_package = "check_zpools"

[[tool.importlinter.contracts]]
name = "Architecture layers"
type = "layers"
layers = [
  "check_zpools.cli",
  "check_zpools.cli_commands",
  "check_zpools.alias_manager",
  "check_zpools.service_install",
  "check_zpools.behaviors",
  "check_zpools.daemon",
  "check_zpools.alerting | check_zpools.config_show | check_zpools.config_deploy | check_zpools.cli_email_handlers | check_zpools.cli_errors | check_zpools.cli_traceback | check_zpools.logging_setup",
  "check_zpools.formatters",
  "check_zpools.alert_state | check_zpools.monitor | check_zpools.zfs_parser",
  "check_zpools.mail | check_zpools.zfs_client | check_zpools.config",
  "check_zpools.models | check_zpools.__init__conf__",
]

[tool.bashate]
max-line-length = 120
ignores = ["E003"]

[tool.pip-audit]
# Known vulnerabilities to ignore (unfixable or accepted risk)
# GHSA-4xh5-x5gv-qwph: py library ReDoS (no fix available, low risk)
# PYSEC-2022-42969: same as above (alias)
ignore-vulns = ["GHSA-4xh5-x5gv-qwph", "PYSEC-2022-42969"]
