[project]
name = "check_zpools"
version = "3.7.7"
description = "Zpool Monitoring Daemon"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich-click>=1.9.8",
    "lib_cli_exit_tools>=2.3.3",
    "lib_log_rich>=6.3.5",
    "lib_layered_config>=5.6.1",
    "btx-lib-mail>=1.5.0",
    "python-dateutil>=2.9.0",
    "psutil>=7.2.2",
    "pydantic>=2.13.4",
]
license = { text = "MIT" }
authors = [{ name = "bitranox", email = "bitranox@gmail.com" }]
keywords = ["cli", "daemon", "zpool", "monitoring"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Typing :: Typed",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

# System packages required for CI runners (read by GitHub Actions workflow template)
# Format: "apt_package_name" for Ubuntu, future: {"apt": "...", "brew": "...", "choco": "..."}
[tool.ci]
system-dependencies-ubuntu = []
system-dependencies-macos = []
system-dependencies-windows-pip = []
system-dependencies-windows-choco = []
os = ["ubuntu-latest", "windows-latest", "macos-latest"]

[project.urls]
Homepage = "https://github.com/bitranox/check_zpools"
Repository = "https://github.com/bitranox/check_zpools.git"
Issues = "https://github.com/bitranox/check_zpools/issues"

[project.optional-dependencies]
dev = [
  "pytest>=9.1.1",
  "pytest-cov>=7.1.0",
  "ruff>=0.16.0",
  "pyright[nodejs]>=1.1.411",
  "bandit>=1.9.4",
  # 1.5.1 was yanked upstream (unintended breaking changes), so 1.5.0 is the newest usable
  # release; a >=1.5.1 floor has ZERO candidates and makes this extra unresolvable.
  "build>=1.5.0",
  "twine>=6.2.0",
  # codecov-cli is disabled, not dropped: it requires click<8.3.0, which drags click back to
  # 8.2.1 - the version with CVE-2026-7246 (command injection in click.edit(), fixed in 8.3.3).
  # Nothing else here caps click, so with this line active the audit gate goes red on every
  # clean install. Leaving it off costs nothing: CI uploads coverage via codecov/codecov-action,
  # not this CLI, and "bmk codecov" resolves codecovcli from PATH and only warns when absent.
  # Re-enable once codecov-cli relaxes its click<8.3.0 pin.
  # "codecov-cli>=11.2.6",
  # Transitive CVE pins
  "click>=8.4.2",                # CVE-2026-7246
  "pip-audit>=2.10.1",
  "textual>=8.2.8",
  "import-linter>=2.13",
  "rtoml>=0.13.0",
]

[project.scripts]
check_zpools = "check_zpools.cli:main"

[build-system]
requires = ["hatchling>=1.31.0"]
build-backend = "hatchling.build"



[tool.hatch.build.targets.wheel]
packages = ["src/check_zpools"]
include = ["src/check_zpools/py.typed", "src/check_zpools/defaultconfig.toml"]

[tool.ruff]
line-length = 160
target-version = "py310"

[tool.ruff.lint]
select = [
  "E", "W",     # pycodestyle
  "F",           # pyflakes
  "I",           # isort
  "N",           # pep8-naming
  "UP",          # pyupgrade
  "B",           # bugbear
  "A",           # builtins shadowing
  "C4",          # comprehension simplification
  "SIM",         # simplification
  "TCH",         # type-checking imports
  "RUF",         # ruff-specific
  "G",           # logging format (catches f-string in logger)
  "T20",         # print statements
  "PTH",         # pathlib preference
  "PLC", "PLE",  # pylint conventions/errors
  "S",           # flake8-bandit security checks
  "PERF",        # performance anti-patterns
  "ERA",         # eradicate dead/commented-out code
  "FBT",         # boolean trap (boolean positional args)
  "PLR",         # pylint refactor
  "PLW",         # pylint warnings
]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-type-checking]
# alert_state.py, models.py, and zfs_client.py define Pydantic models that resolve their
# field annotations at model-build time, so their field-type imports must stay at runtime.
# Telling ruff about the Pydantic base keeps TC001/TC002/TC003 from moving those imports
# into a TYPE_CHECKING block and breaking model construction.
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.per-file-ignores]
# ignore the "unused import sys" in the jupyter notebook - which we need (it is a linter hickup)
# T20: notebooks are tutorial/demo code - print() output is the whole point of a Quickstart cell.
"notebooks/*.ipynb" = ["F401", "T20"]
# Tests: assert is standard, test fixtures have passwords, magic values are clearer inline, temp paths are fine.
# PLC0415: local/deferred imports are a deliberate test idiom - several tests import inside the test
# body to exercise import-time and cache behaviour, so moving them to module top would defeat intent.
# ERA001: eradicate misreads "# === \n # Tests: <name> \n # ===" section-header banners as
# commented-out code (the "Tests: name" line looks like a dict/slice literal to its heuristic).
"tests/*.py" = ["T20", "S101", "S105", "S106", "S108", "FBT001", "FBT003", "PLR0913", "PLR2004", "PLC0415", "ERA001"]
# CLI: Click options arrive by keyword, but the option count itself is genuinely > 5
"src/check_zpools/cli.py" = ["PLR0913"]
"src/check_zpools/cli_commands/**/*.py" = ["PLR0913"]
# Email adapters: a send function's signature genuinely needs recipients/subject/body/attachments/etc.
"src/check_zpools/mail.py" = ["PLR0913"]
"src/check_zpools/alerting.py" = ["PLR0913"]

[tool.pyright]
typeCheckingMode = "strict"
extraPaths = [
  "src",
]
exclude = [
  "scripts/menu.py",
  "LLM-CONTEXT",
  ".venv*",
]
reportPrivateUsage = false
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportMissingTypeArgument = "none"

[tool.pytest.ini_options]
addopts = ["--doctest-modules"]
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE"]
pythonpath = ["src"]
norecursedirs = ["LLM-CONTEXT", ".git", ".github", "dist", "build", "*.egg"]
markers = [
  "os_agnostic: test runs on every supported operating system",
  "os_windows: test exercises Windows-only behavior",
  "os_macos: test exercises macOS-only behavior",
  "os_posix: test exercises behavior requiring POSIX semantics",
  "os_linux: test exercises Linux-only behavior",
]

[tool.coverage.run]
branch = true
parallel = false
data_file = ".coverage.unit"
source = ["src/check_zpools"]

[tool.coverage.report]
omit = [
  "tests/*",
]
# pinned to 70% - coverage is lower on windows
fail_under = 70
show_missing = true

[tool.clean]
# Patterns to remove when running `make clean` or `python -m scripts clean`
patterns = [
  ".hypothesis",
  ".import_linter_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".pyright",
  ".mypy_cache",
  ".tox",
  ".nox",
  ".eggs",
  "*.egg-info",
  "build",
  "dist",
  "htmlcov",
  ".coverage",
  "coverage.xml",
  "codecov.sh",
  ".cache",
  "result",
]

[tool.git]
# Default git remote for push/release commands
default-remote = "origin"


[tool.scripts.test]
# Configuration for scripts/test.py test runner
pytest-verbosity = "-vv"
coverage-report-file = "coverage.xml"
src-path = "src"
[tool.importlinter]
root_package = "check_zpools"

[[tool.importlinter.contracts]]
name = "Architecture layers"
type = "layers"
layers = [
  "check_zpools.cli",
  "check_zpools.cli_commands",
  "check_zpools.alias_manager",
  "check_zpools.service_install",
  "check_zpools.behaviors",
  "check_zpools.daemon",
  "check_zpools.alerting | check_zpools.config_show | check_zpools.config_deploy | check_zpools.cli_email_handlers | check_zpools.cli_errors | check_zpools.cli_traceback | check_zpools.logging_setup",
  "check_zpools.formatters",
  "check_zpools.alert_state | check_zpools.monitor | check_zpools.zfs_parser",
  "check_zpools.mail | check_zpools.zfs_client | check_zpools.config",
  "check_zpools.models | check_zpools.__init__conf__",
]

[tool.bashate]
max-line-length = 120
ignores = ["E003"]

[tool.pip-audit]
# Known vulnerabilities to ignore (unfixable or accepted risk)
# GHSA-4xh5-x5gv-qwph: py library ReDoS (no fix available, low risk)
# PYSEC-2022-42969: same as above (alias)
# PYSEC-2022-43012: setuptools vendored in build env, not a runtime dependency
# PYSEC-2025-49: setuptools vendored in build env, not a runtime dependency
# CVE-2024-6345: setuptools vendored in build env, not a runtime dependency
# CVE-2026-26007: cryptography transitive dep, fix available in 46.0.5 (awaiting upstream update)
ignore-vulns = ["GHSA-4xh5-x5gv-qwph", "PYSEC-2022-42969", "PYSEC-2022-43012", "PYSEC-2025-49", "CVE-2024-6345", "CVE-2026-26007", "CVE-2026-4539", "CVE-2026-25645"]
